Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.142     2018-07-01 22:40:53Z
          - always report installed version of Module::Runtime in
            t/00-report-prereqs.t, as recent versions are incompatible with
            older Moose.
          - always report installed version of File::Temp

0.141     2018-05-21 19:12:49Z
          - still more fixes to $TODO in xt/author/changes_has_content.t

0.140     2018-05-16 04:30:10Z
          - and even more fixes to $TODO in xt/author/changes_has_content.t
          - bump minimum required version of [@Git::VersionManager] to avoid
            test failures

0.139     2018-05-15 05:56:41Z
          - yet more fixes to $TODO in xt/author/changes_has_content.t

0.138     2018-05-15 04:07:46Z
          - updated travis configs (in this distribution, and minting profile)
            to reflect the new latest Dist::Zilla version in the 5.x series
          - further fixes to $TODO in xt/author/changes_has_content.t

0.137     2018-04-01 22:55:32Z
          - fixed $TODO in xt/author/changes_has_content.t

0.136     2018-03-22 04:19:40Z
          - add new xt/author/changes_has_content.t that calls
            xt/release/changes_has_content.t if not on master branch (for
            verifying that pull requests contain a Changes entry)
          - bump minimum required version of [Test::MinimumVersion], to get
            recent change from xt/release -> xt/author

0.135     2018-03-04 19:47:45Z
          - fix CONTRIBUTING template that might sometimes generate an
            undefined warning (tickling tests with AUTHOR_TESTING=1 under
            Text::Template 1.48)

0.134     2018-03-03 08:44:42Z
          - always report installed version of Encode in
            t/00-report-prereqs.t, as it is called by core code (PerlIO).

0.133     2018-01-14 08:25:00Z
          - new 'plugin_prereq_phase' and 'plugin_prereq_relationship'