@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - allow the document to provide its own AUTHOR pod section,
+            overriding what we would normally weave into the document
 
 0.142     2018-07-01 22:40:53Z
           - always report installed version of Module::Runtime in
